NTP servers are space seperated!

--- a/templates/timesyncd.conf.j2
+++ b/templates/timesyncd.conf.j2
@@ -14,7 +14,7 @@
 # See timesyncd.conf(5) for details.
 
 [Time]
-NTP={% for server in systemd_timesyncd_servers %}{{ server }}{% if not loop.last %},{% endif %}{% endfor %}
+NTP={% for server in systemd_timesyncd_servers %}{{ server }}{% if not loop.last %} {% endif %}{% endfor %}
 
 #FallbackNTP=0.debian.pool.ntp.org 1.debian.pool.ntp.org 2.debian.pool.ntp.org 3.debian.pool.ntp.org
 #RootDistanceMaxSec=5
