Fix for ansible_managed comment

--- a/templates/unit.j2
+++ b/templates/unit.j2
@@ -1,4 +1,4 @@
-{{ ansible_managed | ansible.builtin.comment }}
+# {{ systemd_ansible_managed }}
 
 {% if systemd_file.comment is defined %}
 # BEGIN ANSIBLE MANAGED BLOCK
