--- a/templates/unit.j2
+++ b/templates/unit.j2
@@ -10,13 +10,24 @@
 {% for systemd_section in systemd_file.conf | dict2items %}
 [{{ systemd_section.key }}]
 {% for systemd_variable_pair in systemd_section.value | dict2items %}
-{{ systemd_variable_pair.key }}={{ systemd_variable_pair.value }}
+{% if systemd_variable_pair.value | type_debug == "list" %}
+{% for systemd_variable_item in systemd_variable_pair.value %}
+{{ systemd_variable_pair.key }}={{ systemd_variable_item }}
 {% endfor %}
-
+{% else %}
+{{ systemd_variable_pair.key }}={{ systemd_variable_pair.value }}
+{% endif %}
+{% endfor %}
 {% endfor %}
 {% else %} 
 {% for systemd_variable_pair in systemd_file.conf | dict2items %}
+{% if systemd_variable_pair.value | type_debug == "list" %}
+{% for systemd_variable_item in systemd_variable_pair.value %}
+{{ systemd_variable_pair.key }}={{ systemd_variable_item }}
+{% endfor %}
+{% else %}
 {{ systemd_variable_pair.key }}={{ systemd_variable_pair.value }}
+{% endif %}
 {% endfor %}
 {% endif %}
 
