--- a/templates/unit.j2
+++ b/templates/unit.j2
@@ -1,13 +1,14 @@
 # {{ systemd_ansible_managed }}
-
 {% if systemd_file.comment is defined %}
+
 # BEGIN ANSIBLE MANAGED BLOCK
 {{ systemd_file.comment | ansible.builtin.comment }}
 # END ANSIBLE MANAGED BLOCK
-{% endif %}
 
-{% if systemd_dictionary_depth == 2 %}
+{% endif %}
+{% if systemd_conf_depth is regex('^2|3$') %}
 {% for systemd_section in systemd_file.conf | dict2items %}
+
 [{{ systemd_section.key }}]
 {% for systemd_variable_pair in systemd_section.value | dict2items %}
 {% if systemd_variable_pair.value | type_debug == "list" %}
@@ -19,7 +20,7 @@
 {% endif %}
 {% endfor %}
 {% endfor %}
-{% else %} 
+{% elif systemd_conf_depth == 1 %} 
 {% for systemd_variable_pair in systemd_file.conf | dict2items %}
 {% if systemd_variable_pair.value | type_debug == "list" %}
 {% for systemd_variable_item in systemd_variable_pair.value %}
