--- a/templates/unit.j2
+++ b/templates/unit.j2
@@ -13,10 +13,10 @@
 {% for systemd_variable_pair in systemd_section.value | dict2items %}
 {% if systemd_variable_pair.value | type_debug == "list" %}
 {% for systemd_variable_item in systemd_variable_pair.value %}
-{{ systemd_variable_pair.key }}={{ systemd_variable_item }}
+{{ systemd_variable_pair.key }}={% if systemd_variable_item | type_debug == "bool" %}{{ systemd_variable_item | lower }}{% else %}{{ systemd_variable_item }}{% endif %}
 {% endfor %}
 {% else %}
-{{ systemd_variable_pair.key }}={{ systemd_variable_pair.value }}
+{{ systemd_variable_pair.key }}={% if systemd_variable_pair.value | type_debug == "bool" %}{{ systemd_variable_pair.value | lower }}{% else %}{{ systemd_variable_pair.value }}{% endif %}
 {% endif %}
 {% endfor %}
 {% endfor %}
@@ -24,10 +24,10 @@
 {% for systemd_variable_pair in systemd_file.conf | dict2items %}
 {% if systemd_variable_pair.value | type_debug == "list" %}
 {% for systemd_variable_item in systemd_variable_pair.value %}
-{{ systemd_variable_pair.key }}={{ systemd_variable_item }}
+{{ systemd_variable_pair.key }}={% if systemd_variable_item | type_debug == "bool" %}{{ systemd_variable_item | lower }}{% else %}{{ systemd_variable_item }}{% endif %}
 {% endfor %}
 {% else %}
-{{ systemd_variable_pair.key }}={{ systemd_variable_pair.value }}
+{{ systemd_variable_pair.key }}={% if systemd_variable_pair.value | | type_debug == "bool" %}{{ systemd_variable_pair.value | lower }}{% else %}{{ systemd_variable_pair.value }}{% endif %}
 {% endif %}
 {% endfor %}
 {% endif %}
