add verification of vars using the arg spec

--- a/templates/unit.j2
+++ b/templates/unit.j2
@@ -1,4 +1,4 @@
-# {# j2lint: disable=single-statement-per-line #}{{ systemd_ansible_managed }}
+# {# j2lint: disable=single-statement-per-line #}{{ ansible_managed }}
 {% if systemd_file.comment is defined %}
 
 # BEGIN ANSIBLE MANAGED BLOCK
